# paseto_cli

./: .gitignore  Cargo.toml  README.md  index.js  install.js  mock_key  package-lock.json  package.json  paseto-cli-man-page.md  update_optional_deps.js
.github/workflows/: npm_dependency_publish.yml  npm_publish.yml  release_and_publish.yml  update_package_json_version.yml
scripts/: install.js  update_optional_deps.js
src/: main.rs
